fix footer background, alignment and padding

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -193,8 +193,8 @@ footer {
   bottom: 0;
   width: 100%;
   text-align: center;
-  padding: 0 5rem 1rem 0;
-  background-color: transparent;
+  padding: 1rem 0;
+  background-color: var(--dark-background);
 }
 footer p {
   background-color: transparent;
